fix(DOD-545): dependencies updated
- Java 21 refactoring
- UI test fixes